# Accounting-BE

./: Dockerfile  PRD.md  SRS.md  alembic.ini  conftest.py  docker-compose.observability.yml  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_vendor_rules.py  0003_file_uploads.py  0004_invoice_journal_entry.py  0005_bill_ledger_fields.py
app/: dependencies.py  main.py
app/core/: audit.py  config.py  enums.py  exceptions.py  pagination.py  security.py
app/db/: mixins.py  session.py
app/middleware/: idempotency.py  tenant.py
app/modules/accounting_core/: models.py  periods.py  router.py  seed.py  services.py  test_period_close.py  test_period_lock.py  test_period_reopen.py  test_retained_earnings_close.py  test_seed.py  test_services.py  test_void.py  test_void_already_voided.py  test_void_closed_period.py  test_void_draft_entry.py  test_year_end_close.py  void.py
app/modules/ai/: router.py  services.py  test_explain_suggestion.py
app/modules/audit/: router.py  test_audit_events.py
app/modules/auth/: models.py  router.py  test_register_conflict.py
app/modules/banking/: models.py  router.py  rules.py  test_approve_transaction.py  test_vendor_rule_learning.py
app/modules/billing/: router.py
app/modules/files/: models.py  router.py  (+1 more)
app/observability/: otel.py
app/workers/: import_worker.py  main.py  report_worker.py  scan_worker.py  test_import_worker.py  test_report_worker.py
config/jurisdictions/: pk.json
tests/: conftest.py
tests/fixtures/: tenant_factory.py
(+30 files in other folders)
