[project]
name = "accounting-software"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aioclamd>=1.0.0",
    "asyncpg>=0.31.0",
    "python-multipart>=0.0.32",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
